<resources>
    <string name="app_name">Roots &amp; Recipes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="effortlessly_capture">Effortlessly capture and share your cherished recipes with the world, using simple voice.</string>
    <string name="preserve_your_legacy">Preserve Your Legacy, Share Your Flavor</string>
    <string name="create_an_account">Create an Account</string>
    <string name="exclusive_benefits">Sign up for free and unlock exclusive benefits</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="name_required">Name <font color='#FF0000'>*</font></string>
    <string name="first_name_required">First Name <font color='#FF0000'>*</font></string>
    <string name="last_name_required">Last Name <font color='#FF0000'>*</font></string>
    <string name="username">Username</string>
    <string name="username_required">Username <font color='#FF0000'>*</font></string>
    <string name="email_address">Email address</string>
    <string name="email_address_required">Email address <font color='#FF0000'>*</font></string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="password_required">Password <font color='#FF0000'>*</font></string>
    <string name="service_and_privacy_policy">I agree to the <font color='#2C4B22'><b><u>Terms of Service</u></b></font> and <font color='#2C4B22'><b><u>Privacy Policy</u></b></font></string>
    <string name="next">Next</string>
    <string name="already_have_an_account_login">Already have an account? <font color='#2C4B22'><u>Login</u></font></string>
    <string name="dont_have_an_account">Don\’t have an account with us? <font color='#2C4B22'><u>Signup</u></font></string>
    <string name="_2_step_verification">2-step verification</string>
    <string name="please_enter_the_4">Please enter the 4-digit verification code sent</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="hey_welcome_back">Hey Welcome back</string>
    <string name="log_in_to_continue">Log in to continue capturing and sharing your cherished recipes effortlessly.</string>
    <string name="username_email_address">Username/Email address</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="forgot">Forgot Password</string>
    <string name="please_enter_your_email">Please enter your email address to reset your password.</string>
    <string name="create_new_password">Enter your email address and we\'ll email you a OTP to verify the email address and create new password</string>
    <string name="send_otp">Send OTP</string>
    <string name="create_new_pass">Create New Password</string>
    <string name="previous_password">Enter a new password, not less than 8 characters and not be your previous password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_required">New Password<font color='#FF0000'>*</font></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="settings">Settings</string>
    <string name="discover">Discover</string>
    <string name="recipes">Recipes</string>
    <string name="chat">Chat</string>
    <string name="account_and_notification">Account and Notification</string>
    <string name="profile_info">Profile info</string>
    <string name="notification_preferences">Notification preferences</string>
    <string name="change_password">Change Password</string>
    <string name="general_info">General info</string>
    <string name="save_recipes">Favorite Recipes</string>
    <string name="subscription">Subscription</string>
    <string name="connect_social_media">Connect Social Media</string>
    <string name="about_roots_recipes"><![CDATA[About Roots & Recipes]]></string>
    <string name="administration">Administration</string>
    <string name="contact_support">Contact Support</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="share_app">Share app</string>
    <string name="rate_us">Rate us</string>
    <string name="app_version">App Version</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="edit">Edit</string>
    <string name="write_your_bio">Write your bio</string>
    <string name="update">Update</string>
    <string name="notifications">Notifications</string>
    <string name="enable_or_disable_all_app_notifications">Enable or disable all app notifications.</string>
    <string name="get_notified_when_someone_rates_your_recipe">Get notified when someone rates your recipe.</string>
    <string name="new_comment">New Comment</string>
    <string name="receive_alerts_for_new_comments_on_your_recipes">Receive alerts for new comments on your recipes.</string>
    <string name="add_new_recipe">Add New Recipe</string>
    <string name="stay_updated_when_new_recipes_are_added_by_others">Stay updated when new recipes are added by others.</string>
    <string name="enter_a_new_password">Enter a new password with no less than 8 characters and not the same as your previous password.</string>
    <string name="old_password">Old Password</string>
    <string name="old_password_required">Old Password<font color='#FF0000'>*</font></string>
    <string name="re_enter_new_password">Re-enter new Password</string>
    <string name="re_enter_new_password_required">Re-enter new Password<font color='#FF0000'>*</font></string>
    <string name="instagram">Instagram</string>
    <string name="connect">Connect</string>
    <string name="tik_tok">Tik Tok</string>
    <string name="connected">Connected</string>
    <string name="are_you_certain_you_want_to_delete_your_account">Are you sure you want to delete your account? This action will permanently delete all your data, including favorite recipes and personal information. This cannot be undone. Proceed with caution.</string>
    <string name="roots_recipes"><![CDATA[Roots & Recipes]]></string>
    <string name="all_recipes">All Recipes</string>
    <string name="discover_recipes">Discover Recipes</string>
    <string name="see_all">See all</string>
    <string name="breakfast_recipes">Breakfast Recipes</string>
    <string name="filter_recipes">Filter Recipes</string>
    <string name="clear">Clear</string>
    <string name="recipes_found">Recipes found</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="my_recipes">My Recipes</string>
    <string name="share_profile">share Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_message_text">It’s quiet in here...</string>
    <string name="chat_with_other_now">Chat with other now</string>
    <string name="hint_message">Write your message</string>
    <string name="active_now">Active Now</string>
    <string name="tutorial_step1">Step 1: Speak Your Recipe</string>
    <string name="tutorial_step1_content">Simply talk, and your voice will be converted into text automatically.</string>
    <string name="tutorial_step2">Step 2: Review and Organize</string>
    <string name="tutorial_step2_content">Check the text for accuracy and press “Next.” Select the appropriate category for your recipe.</string>
    <string name="tutorial_step3">Step 3: Generate Your Recipe</string>
    <string name="tutorial_step3_content">Once you submit, we’ll work behind the scenes to craft an organic, refined recipe just for you.\n\n Start capturing your culinary creations effortlessly!</string>
    <string name="ok">Ok</string>
    <string name="record_recipe_instruction">To capture your recipe, simply press the button once to begin recording and start speaking. Our app will automatically convert your voice into text.\n\nWhen you’re done, press the button again to stop the recording. You can then review and save the text, ensuring your recipe is accurate and ready to proceed to the next step. With this seamless process.</string>
    <string name="record_recipe">Record Recipe</string>
    <string name="confirm_recipe_recording">Confirm Recipe Recording</string>
    <string name="confirm_recording_question">Are you sure your recipe recording is complete?</string>
    <string name="cb_confirm_recording">Do not show in future recordings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="review_recording">Review Recording</string>
    <string name="edit_recording">Edit Recording</string>
    <string name="modify_recording">Modify Recording</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="select_cuisine_required">Select Cuisine <font color='#FF0000'>*</font></string>
    <string name="select_cuisine">Select Cuisine</string>
    <string name="select_category_required">Select Category <font color='#FF0000'>*</font></string>
    <string name="select_category">Select Category</string>
    <string name="name_of_recipes">Name of recipes</string>
    <string name="name_of_recipes_required">Name of recipes <font color='#FF0000'>*</font></string>
    <string name="add_cuisine">+ Add Cuisine</string>
    <string name="proceed">Proceed</string>
    <string name="add_cuisine_question">What type of cuisine it is?</string>
    <string name="enter_cuisine_text">Enter cuisine type that your recipe belong to?</string>
    <string name="enter_cuisine_name">Enter Cuisine Name</string>
    <string name="add_new_cuisine">Add New Cuisine</string>
    <string name="process_dialog_text">We are crafting an organic, refined recipe just for you.</string>
    <string name="cancel">Cancel</string>
    <string name="allow_microphone_access">Allow Microphone Access</string>
    <string name="please_allow_microphone_and_speech_recognition_permissions_in_your_settings_to_use_this_feature">Please allow microphone and speech recognition permissions in your settings to use this feature.</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="write_your_comment">Write Your Comment</string>
    <string name="show_more_comments">Show More Comments</string>
    <string name="leave_your_ratings">Leave your ratings</string>
    <string name="rate_recipe">Rate Recipe</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="message">Message</string>
    <string name="notification">Notification</string>
    <string name="follow">Follow</string>
    <string name="all_followers">All Followers</string>
    <string name="all_followings">All Followings</string>
    <string name="new_message">New Message</string>
    <string name="verify_now">Verify Now</string>
    <string name="select_photo_from">Select Photo From</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="str_select_picture">Select Picture</string>
    <string name="share_via">Share Via</string>
    <string name="share_with_connection">Share with Connection</string>
    <string name="copy_link">Copy Link</string>
    <string name="share">Share</string>
    <string name="continue_text">Continue</string>
    <string name="not_now">Not now</string>
    <string name="listening_try_saying">Hi, I\'m listening. Try saying...</string>
    <string name="remove_follower">Remove follower?</string>
    <string name="remove">Remove</string>
    <string name="invite"><u>Invite</u></string>
</resources>