<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/circular_border"
    android:layout_marginBottom="@dimen/_20sdp"
    android:padding="@dimen/_12sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tutorialHeaderLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/tutorialIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tutorial_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="How To tutorial"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:fontFamily="@font/work_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tutorialIcon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tutorialContentLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorialHeaderLayout">

        <TextView
            android:id="@+id/tvStep1Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:text="@string/tutorial_step1"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:fontFamily="@font/work_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvStep1Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tutorial_step1_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:fontFamily="@font/work_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStep1Heading" />

        <TextView
            android:id="@+id/tvStep2Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:text="@string/tutorial_step2"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:fontFamily="@font/work_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStep1Content" />

        <TextView
            android:id="@+id/tvStep2Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tutorial_step2_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:fontFamily="@font/work_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStep2Heading" />

        <TextView
            android:id="@+id/tvStep3Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:text="@string/tutorial_step3"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:fontFamily="@font/work_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStep2Content" />

        <TextView
            android:id="@+id/tvStep3Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tutorial_step3_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:fontFamily="@font/work_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStep3Heading" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/dividerView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@color/divider_line"
        app:layout_constraintTop_toBottomOf="@id/tutorialContentLayout" />

    <TextView
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/ok"
        android:textColor="@color/green"
        android:textSize="@dimen/_12ssp"
        app:fontFamily="@font/work_sans"
        app:layout_constraintTop_toBottomOf="@id/dividerView" />

</androidx.constraintlayout.widget.ConstraintLayout>